		  run enormously faster (my medium-end GPU is 35x faster than
		  one core of my medium-end CPU). The GPU branch also contains
		  root generation code that is critically needed to search for
		  degree-6 polynomials. Hopefully in future releases the
		  GPU and CPU code will be more tightly integrated (thanks
		  to many folks at Mersenneforum for helping to test this)
		- Modified the main driver to avoid saving nonexistent 
		  polynomials
		- Modified the main driver to use stricter bounds for 
		  accepting polynomials
	- Fixed a bug in the relation reading code that caused crashes when 
		initializing empty dependencies (thanks Jeff Gilchrist)
	- Allowed NFS poly selection and sieving for inputs down to 80 digits
		(thanks andi47)


Version 1.43: 10/18/09
	- Made the GMP library mandatory
	- Removed the arbitrary precision math library, replaced with GMP
	- Modified the NFS relation handling code to allow 63-bit 'a' 
		values and 48-bit prime factors. The code now also performs
		runlength-encoding on the list of prime factors
	- Added 64-bit modmul operations to all builds
	- Added checks that the input NFS number corresponds to the input
		NFS polynomials (thanks Tom Womack)
	- NFS square root changes:
		- Optimized the brute force square root code, especially
		  when dealing with degree > 6 (thanks Serge Batalov)
		- Modified the NFS relation reading code to ignore 
		  relations that would not participate in dependencies anyway.
		  This also makes the NFS square root a bit simpler
		- Modified the initialization to be a little more 
		  robust (thanks andi47)
	- Add support for degree 8 NFS polynomials (thanks Serge Batalov)
	- Deleted the ancient unskewed NFS polynomial selector
	- Removed now-unused double-double code
	- Reset the number of relations and ideals properly when reading
		LP relations with increasing max weight (thanks Greg Childers)
	- Increased the input size limit to ~300 digits
	- Adjusted the library link order in the makefile